cluster/apps/monitoring/kube-prometheus-stack/vs-alertmanager.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prom-alertmanager
  namespace: monitoring
spec:
  hosts:
  - alertmanager.${ROOT_DOMAIN}
  gateways:
  - istio-ingress/cluster-ingress-gateway
  http:
  - route:
    - destination:
        host: prom-alertmanager.monitoring.svc.cluster.local
        port:
          number: 9093
