cluster/apps/monitoring/kube-prometheus-stack/vs-prometheus.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prom-prometheus
  namespace: monitoring
spec:
  hosts:
  - prometheus.${ROOT_DOMAIN}
  gateways:
  - istio-ingress/cluster-ingress-gateway
  http:
  - route:
    - destination:
        port:
          number: 9090
        host: prom-prometheus.monitoring.svc.cluster.local
